# acoupi_batdetect2

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  test.yml
docs/: faq.md  index.md
docs/explanation/: batdetect2_program.md  index.md
docs/reference/: cli.md  configuration.md  index.md
docs/tutorials/: configuration.md  deployment.md  index.md  installation.md
docs/user_guide/: configuration.md  faq.md  installation.md
explanation/: index.html
explanation/batdetect2_program/: index.html
faq/: index.html
reference/: index.html
reference/configuration/: index.html
reference/model/: index.html
reference/program/: index.html
search/: search_index.json
src/acoupi_batdetect2/: __init__.py  configuration.py  cprofile.py  model.py  program.py
tests/: conftest.py  test_configs.py  test_file_management.py  test_model.py  test_program.py
tutorials/: index.html
tutorials/configuration/: index.html
tutorials/deployment/: index.html
tutorials/installation/: index.html
